<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_token"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_big">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userKeyEditText"
                    android:nextFocusDown="@id/titleEditText"
                    android:maxLines="1"
                    android:maxEms="30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/title"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_big">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:maxLines="1"
                    android:nextFocusDown="@id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:hint="@string/message"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_big">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/messageEditText"
                        android:nextFocusDown="@id/sendButton"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/scanButton"
                    android:src="@drawable/ic_qr_photo"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/qr_photo_description" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/historyButton"
            android:text="@string/history"
            android:layout_margin="@dimen/margin_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sendButton"
            android:text="@string/send"
            android:layout_margin="@dimen/margin_big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>